# hangman_cpp

./: CMakeLists.txt  README.md
lib/: gui.h
src/: app.manifest  gui.cpp  main.cpp
